--- a/scss/utilities/_MQIndex.scss
+++ b/scss/utilities/_MQIndex.scss
@@ -17,7 +17,7 @@
             .headerI{
                 nav{
                     background-image:linear-gradient(to right, $colorN, $colorN);
-                    margin-bottom: 0.3rem;
+                    margin-bottom: 2rem;
                     div{
                         img{
                             width: 100px;
@@ -45,9 +45,6 @@
             .sectionM{
                 padding-bottom: 0.5rem;
                 div{
-                    h1{
-                        
-                    }
                     h2{
                         margin-bottom: 1rem;
                     }
@@ -56,13 +53,54 @@
             .sectionF{
                 margin-left: 0.2rem;
                 p{
-                    font-size: 35px;
+                    font-size: 30px;
                     margin-left: 1rem;
-                    margin-top: 1rem;
+                    margin-right: 4rem;
+                    margin-top: 6rem;
                 }
             }
             .sectionV{
-                // seguir desde aca
+                align-items: center;
+                video{
+                    margin-right: 3rem;
+                    margin-top: 1rem;
+                }
+            }
+            .sectionR{
+                .redes{
+                    margin-top: 4rem;
+                    text-align: center;
+                    h3{
+                        font-size: 45px;
+                        padding-top: 1rem;
+                        padding-bottom: 1rem;
+                        padding-left: 2rem;
+                        padding-right: 2rem;
+                    }
+                }
+                .redes2{
+                    text-align: center;
+                    margin-bottom: 0.5rem;
+                    margin-top: 3rem;
+                    a{
+                        margin: 1rem;
+                    }
+                    img{
+                        width: 75px;
+                    }
+                }
+            }
+            footer{
+                // me falta agregar imagenes con link a las redes sociales al footer para hacerlo mas grande
+                align-items: flex-end;
+                justify-content: end;
+                background-color: $colorN;
+                margin-top: 5rem;
+                h4{
+                    text-shadow: 1px 1px $colorR;
+                    font-size: 15px ;
+                    margin-right: 0.5rem;
+                }
             }
         }
     }    
