--- a/scss/utilities/_MQIndex.scss
+++ b/scss/utilities/_MQIndex.scss
@@ -1,6 +1,6 @@
 // media querie version movile del index
 
-@media only screen and (min-width:320px) and (max-width:599px){
+@media only screen and (max-width:600px){
     body{
         background-image: url(../../img/fondoNegro.jpg);
         background-size: cover;
@@ -83,7 +83,7 @@
                     margin-bottom: 0.5rem;
                     margin-top: 3rem;
                     a{
-                        margin: 1rem;
+                        margin: 1.5rem;
                     }
                     img{
                         width: 75px;
