--- a/scss/utilities/_MQContactanos.scss
+++ b/scss/utilities/_MQContactanos.scss
@@ -108,11 +108,7 @@
                             margin-top: 0.7rem;
                         }
                         .ayuda{
-                            div{
-                                label{
-                                    font-size: 22px;
-                                }
-                            }
+                            display: none;
                         }
                     }
                 }
