--- a/scss/utilities/_MQContactanos.scss
+++ b/scss/utilities/_MQContactanos.scss
@@ -22,7 +22,7 @@
                     #navbarSupportedContent{
                         ul{
                             li{
-                                text-align:start;
+                                text-align:center;
                                 background-color: rgba(2, 2, 2, 0);
                                 font-size: 25px;
                                 padding-left: 0rem;
